# ComfyUI_FollowYourEmoji

./: Emoji_nodes.py  README.md  __init__.py  pyproject.toml  requirements.txt
dataset/: val_dataset.py
diffusers/pipelines/: pipeline_utils.py
diffusers/utils/: dynamic_modules_utils.py
example/: example.json
models/: guider.py  video_pipeline.py
models/referencenet/: __init__.py
models/unet/: __init__.py
