[project]
name = "comfyui_followyouremoji"
description = "You can make emoji from a video and a image in comfyui"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["decord==0.6.0", "deepspeed==0.14.0", "easydict==1.10", "einops==0.4.1", "imageio==2.33.0", "onnx==1.16.1", "onnxruntime-gpu==1.14.0", "open-clip-torch", "opencv-python", "tensorboard==2.14.0"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_FollowYourEmoji"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_FollowYourEmoji"
Icon = ""
